  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
         ooprathamm, MeetB7

 * 2.5.0

Fixes
  * Fix element parsing from PSF files tests read via Parmed (Issue #4015)
  * Fix test clobbering in lib/test_util.py (PR #4000)
  * Fix MSD docs to use the correct error metric in example (Issue #3991)
  * Add 'PairIJ Coeffs' to the list of sections in LAMMPSParser.py
    (Issue #3336)

Enhancements
  * Add pickling support for Atom, Residue, Segment, ResidueGroup 
    and SegmentGroup. (PR #3953)

Changes
  * As per NEP29 the minimum supported NumPy version has been raised to 1.21
    (note: in practice later versions of NumPy may be used depending on your
     architecture, operating system, or Python version) (PR #3983)
  * The deprecated direct indexing and `times` from the `results` attribute of
    analysis.nucleicacids' NucPairDist and WatsonCrickDist classes has been
    removed. Please use the `results.pair_distances` and `times` attributes
    instead (Issue #3744)

Deprecations


01/04/23 IAlibay

 * 2.4.2

Fixes
  * np.histogramdd calls in :class:`DensityAnalysis` now pass the `density`
    argument rather than the NumPy 1.24 removed `normed` (PR #3976)
  * visualization.streamlines_3D and visualization.streamlines no longer
    rely on the scalar return of an numpy array elementwise comparison which
    is no longer supported as of NumPy 1.25 (PR #3977)


12/17/22 IAlibay

 * 2.4.1

Fixes
* Fixes pyproject.toml minimum pin for biopython


12/16/22 IAlibay, Luthaf, hmacdope, rafaelpap, jbarnoud, BFedder, aya9aladdin,